# Milestone-Part-1

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  ChangeCommand.cpp  ChangeCommand.h  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  Div.cpp  Div.h  EnterCommand.cpp  EnterCommand.h  Expression.h  GlobalTables.cpp  GlobalTables.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mult.cpp  Mult.h  Neg.cpp  Neg.h  Num.cpp  Num.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  Plus.cpp  Plus.h  PrintCommand.cpp  (+19 more)
